# datathon-mlet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CLOUD_RUNPOD_QUICKSTART.md  Dockerfile  Dockerfile.bento  Dockerfile.mlflow  Dockerfile.test  MakefileOLD  RAG_IMPLEMENTATION_SUMMARY.md  README.md  TESTE_LOCAL.md  api_test.html  api_test.py  app_test.py  benchmark.csv  docker-compose.yaml  docker-compose.yml  dvc.yaml  mlflow.db  modelo_pytorch.pth  modelo_sklearn.joblib  params.yaml  pyproject.toml  requirements.txt.old  requirements_local.txt  run_local.py  test_rag_offline.py
.github/workflows/: ci-cd.yml
app/: main.py
app/core/: config.py
app/security/: guardrails.py
ci-cd/: register_model.py
configs/: monitoring_config.yaml
data/: ingest.py
data/golden_set/: golden_set.json
docker/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.bento  Dockerfile.mlflow  Dockerfile.vllm  cleanup.sh  docker-compose.bento.remote.yml  docker-compose.yml  requirements.bento.txt  requirements.txt
evaluation/: ab_test_prompts.py  benchmark.py  llm_judge.py  ragas_eval.py
generator/serving/: Dockerfile  app.py  bentofile.yaml
mlruns/0/1ca78a7c7c7040508db7219a883944ab/artifacts/: embedding.py
mlruns/0/da47bf99bdaf4608998f58ff55c8a262/artifacts/: ingest.py
mlruns/0/db429e3e942c4e67a2dc8ace2702fbfd/artifacts/: benchmark.csv
mlruns/0/eede272dd63e47eaa6905936e6749b33/artifacts/: ingest.py
mlruns/1/models/m-05070633ff9e404db41d32cb3bb40800/artifacts/: MLmodel
mlruns/1/models/m-0a347150968247a18af544a29c0c6abb/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-1033cf13574f4814aa92ed21cc2eafe6/artifacts/: MLmodel
mlruns/1/models/m-108338a8e980471badfc8d978a2c14fc/artifacts/: MLmodel
mlruns/1/models/m-12160a05cc2943a3940f1ef1df6afa03/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-13642b974d3140d6ac9499084dabac9c/artifacts/: MLmodel
mlruns/1/models/m-1af0a43fe3d94f4782dadef78b7d571a/artifacts/: MLmodel
mlruns/1/models/m-1d62c0519d104d5693f14b8a9e8e91eb/artifacts/: MLmodel  conda.yaml  requirements.txt
models/: modelo_ITUB4.SA.keras  modelo_ITUB4.SA_pytorch.pth  modelo_ITUB4.SA_sklearn.joblib
notebooks/: eda.ipynb
src/agent/: rag_pipeline.py  react_agent.py
src/models/: README.md  baseline.py  train.py
src/monitoring/: drift.py  metrics.py
src/rag/: README.md  api.py  data_loader.py  embedding.py  generator.py  retriever.py
src/serving/: __init__.py  app.py
src/utils/: plot_metrics.py
tests/: README.md  conftest.py  test_api.py  test_baseline.py  test_evoluation.py  test_guardrails.py  test_ingest.py  test_plot_metrics.py  test_train.py
(+41 files in other folders)
