[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datathon-mlet"
version = "0.1.0"
description = "Projeto final com FastAPI, CI/CD e retraining orientado a eventos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "commitizen>=3.29.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "mlruns",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]