[project]
name = "datathon-mlet"
version = "0.1.0"
description = "Pipeline reprodutível de previsão de ações com DVC, MLflow e Docker"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Claudio" }
]

dependencies = [
  # Core
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",

  # ML
  "scikit-learn>=1.4",
  "joblib>=1.4",

  # Data
  "yfinance>=0.2.40",

  # Deep Learning
  "torch>=2.2",
  "tensorflow>=2.15",

  # MLOps
  "mlflow>=2.12",
  "dvc>=3.50"
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "ruff>=0.5.0",
  "pytest>=8.0",
  "pytest-cov"
]

test = [
  "pytest>=8.0",
  "pytest-cov",
  "httpx"
]

# -------------------------------
# Packaging (src layout)
# -------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# -------------------------------
# Black (formatter)
# -------------------------------
[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

# -------------------------------
# Ruff (lint)
# -------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # import sorting
  "B",  # bugbear
]
ignore = [
  "E501"  # linha longa (já tratado pelo black)
]

# -------------------------------
# Pytest
# -------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

# -------------------------------
# Build system
# -------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"